<resources>
    <string name="app_name">Reach Her</string>
    <string name="pass_hint">Password...</string>
    <string name="email_hint">Your Email...</string>
    <string name="login_logo_desc">Logo Login Page</string>
    <string name="login_btn_text">Login</string>
    <string name="login_reg_btn_text">Wanna create new account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Register</string>
    <string name="reg_login_text">Already have an account?</string>
    <string name="reg_pass_text">Password...</string>
    <string name="reg_confirm_pass_text">Confirm Password...</string>
    <string name="setup_name_hint">Your Name...</string>
    <string name="setup_save_btn">Save Account Settings</string>
    <string name="setup_name_hint_text">Your Name ...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Description ...</string>
    <string name="new_post_btn_hint">Post Blog</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_ac_text">Account</string>
    <string name="account_settings">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="report_user">Report User</string>
    <string name="report_bug">Report Bug</string>
    <string name="about">About</string>
    <string name="upload_in_progress">Upload in progress</string>
    <string name="upload_history">Upload History</string>
    <string name="phone">Phone</string>
    <string name="drive_links">Drive Links</string>
    <string name="set_your_bio">Set Your Bio</string>
    <string name="your_core_strength">Your Core Strength</string>
    <string name="your_location">Your Location</string>
</resources>
