<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F573CC"
        tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/regPageLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/login_logo_desc"
            android:fontFamily="@font/product_sans_light"
            android:text="Reach Her"
            android:textColor="#fff"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.128"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/register_logo" />

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_edit_text_field_layout"
            android:drawableRight="@drawable/ic_email_black_24dp"
            android:ems="10"
            android:fontFamily="@font/product_sans_medium"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/whiteTransparentHalf"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/reg_confirm_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_edit_text_field_layout"
            android:drawableEnd="@drawable/ic_lock_black_24dp"
            android:drawableRight="@drawable/ic_lock_black_24dp"
            android:ems="10"
            android:fontFamily="@font/product_sans_medium"
            android:hint="@string/reg_confirm_pass_text"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/whiteTransparentHalf"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_pass" />

        <Button
            android:id="@+id/reg_btn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_button_layout"
            android:backgroundTint="@color/btnColor"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/reg_btn_text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_confirm_pass" />

        <Button
            android:id="@+id/reg_login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_invisible_layout"
            android:text="@string/reg_login_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_btn" />

        <ProgressBar
            android:id="@+id/report_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/reg_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_edit_text_field_layout"
            android:drawableEnd="@drawable/ic_lock_black_24dp"
            android:drawableRight="@drawable/ic_lock_black_24dp"
            android:ems="10"
            android:fontFamily="@font/product_sans_medium"
            android:hint="@string/reg_pass_text"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/whiteTransparentHalf"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_email" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="54dp"
            android:text="Register your account"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regPageLogo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>